--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,9 @@
 {
-  "name": "server",
+  "name": "internship-project",
   "version": "1.0.0",
-  "type": "module",
-  "description": "",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error\""
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@emailjs/browser": "^4.4.1",
-    "cors": "^2.8.6",
-    "express": "^4.22.1",
-    "mongoose": "^8.0.0",
-    "node-fetch": "^3.3.2",
-    "nodemailer": "^8.0.1",
-    "socket.io": "^4.7.2"
+    "start": "node server/index.js",
+    "build": "cd client && npm install && npm run build"
   }
 }
