--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "internship-project",
   "version": "1.0.0",
+  "type": "module",
   "main": "server/index.js",
   "scripts": {
     "start": "node server/index.js",
     "build": "cd client && npm install && npm run build"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   }
 }
